testsuite/bsc.interra/preprocessorTestcases/ifdef/Ifdef_ExpInIfdef.bsv.bsc-out.expected
checking package dependencies
Error: "Ifdef_ExpInIfdef.bsv", line 27, column 2: (P0070)
  Expression block (starting around here) missing return value
